--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="col-md-7">
                   
                     <h1 class="title-bold mb-3 mt-2">Hi, I'm Feryal Majidi<br>
-                    <span class="primary">a passionate entry level front-end developer</span> for creating intuitive and responsive web designs.</h1>
+                    <span class="primary">a passionate entry level front-end developer</span> for creating intuitive and responsive web and app designs.</h1>
                  
                 </div>
                 <div class="col-md-5">
