--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="text-center">
             <p class="tag mb-4  ">Projects</p>
           </div>
-          <h2 class="title-medium mb-9  text-center ">Take a look at some of my self-study projects</h2>
+          <h2 class="title-medium mb-9  text-center ">Please take a look at some of the self-taught projects I've done to improve my programming skills.</h2>
           <div class="row">
             <div class="col-md-6">
               <div class='card mt-4'>
