--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <img src='./img/exp1.png' />
         </div>
         <div class="col-md-6 des">
-            <h5>Lawyer </h5>
+            <h5>E-commerce law consultant </h5>
             <p>Company: Maxim  (Online taxi app)<br/>
             October 2020 - July 2022
             </p>
