--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="col-md-6 align-self-center">
                   <p class="tag mb-4">About me</p>
                   <h2 class="title-medium mb-3">"Ensuring flawless software, one test at a time."</h2>
-                  <p>Motivated and detail-oriented aspiring software tester with foundational knowledge of testing tools, programming languages, and quality assurance practices. Passionate about delivering high-quality software and ensuring exceptional user experiences through thorough testing and analysis.
+                  <p>Dedicated and detail-oriented Junior Software Tester with 4 months of hands-on experience in manual testing. Proficient in identifying, documenting, and tracking software defects to ensure product quality. Skilled in executing test cases, analyzing results, and collaborating with development teams to deliver user-centric solutions.  Adept at working in fast-paced environments and committed to continuous learning to enhance testing expertise.
                    </p>
                 
                  
